[package]
name = "negotiation"
version = "0.1.0"
authors = ["Jan Wanot <Jan.Wanot.2017@live.rhul.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer =  "0.5.0"
console =  "0.9.1"
rand = "0.7.3"
rand_distr = "0.2.2"